--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -64,13 +64,16 @@
     --input: 217.2 32.6% 17.5%;
     --ring: 212.7 26.8% 83.9%;
   }
-}
 
-@layer base {
   * {
     @apply border-border;
   }
+
   body {
     @apply bg-background text-foreground;
+  }
+  
+  h1 {
+    @apply text-4xl sm:text-5xl md:text-6xl font-mono;
   }
 }
