--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -34,6 +34,13 @@
     --ring: 240 5% 64.9%;
 
     --radius: 0.5rem;
+
+    --box-shadow-light: 7px 7px 15px rgba(0, 0, 0, 0.1),
+      -7px -7px 15px rgba(255, 255, 255, 0.7);
+    --box-shadow-inset-light: inset 7px 7px 15px rgba(0, 0, 0, 0.1),
+      inset -7px -7px 15px rgba(255, 255, 255, 0.7);
+    --border-color-light: rgba(255, 255, 255, 0.18);
+    --background-gradient: linear-gradient(135deg, #f5f7fa, #c3cfe2);
   }
 
   .dark {
@@ -65,6 +72,13 @@
     --destructive-foreground: 0 85.7% 97.3%;
 
     --ring: 240 3.7% 15.9%;
+
+    --box-shadow-light: 7px 7px 15px rgba(0, 0, 0, 0.5),
+      -7px -7px 15px rgba(255, 255, 255, 0.1);
+    --box-shadow-inset-light: inset 7px 7px 15px rgba(0, 0, 0, 0.5),
+      inset -7px -7px 15px rgba(255, 255, 255, 0.1);
+    --border-color-light: rgba(255, 255, 255, 0.1);
+    --background-gradient: linear-gradient(135deg, #09090b, #1a1a2e);
   }
 }
 
@@ -125,20 +139,50 @@
       2px 2px 2px rgba(255, 255, 255, 0.8);
   }
 
-  .neumorphism-glass {
-    width: 200px;
-    height: 200px;
+  /* .neumorphism-glass {
+    width: 100px;
+    height: 100px;
     background: rgba(255, 255, 255, 0.2);
-    border-radius: 30px;
-    box-shadow: 7px 7px 15px rgba(0, 0, 0, 0.1),
-      -7px -7px 15px rgba(255, 255, 255, 0.7),
-      inset 7px 7px 15px rgba(0, 0, 0, 0.1),
-      inset -7px -7px 15px rgba(255, 255, 255, 0.7);
-    backdrop-filter: blur(10px);
+    border-radius: 10px;
+    box-shadow: 7px 7px 15px var(--box-shadow-color1),
+      -7px -7px 15px var(--box-shadow-color2),
+      inset 7px 7px 15px var(--box-shadow-inset-color1),
+      inset -7px -7px 15px var(--box-shadow-inset-color2);
+    backdrop-filter: blur(30px);
     border: 1px solid rgba(255, 255, 255, 0.18);
     display: flex;
     justify-content: center;
     align-items: center;
     position: relative;
-  }  
+  } */
+
+  .neumorphism-glass {
+    width: 200px;
+    height: 200px;
+    background: rgba(255, 255, 255, 0.2);
+    border-radius: 30px;
+    box-shadow: var(--box-shadow-light);
+    backdrop-filter: blur(10px);
+    border: 1px solid var(--border-color-light);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+  }
+
+  .neumorphism-glass-top {
+    width: 180px;
+    height: 180px;
+    background: rgba(255, 255, 255, 0.3);
+    border-radius: 20px;
+    box-shadow: var(--box-shadow-inset-light);
+    backdrop-filter: blur(10px);
+    border: 1px solid var(--border-color-light);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 10px;
+    left: 10px;
+  }
 }
