--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -99,11 +99,7 @@
 
   body {
     @apply bg-background text-foreground;
-    /* font-feature-settings: "rlig" 1, "calt" 1; */
-  }
-
-  h1 {
-    @apply text-4xl sm:text-5xl md:text-6xl font-mono;
+    font-feature-settings: "rlig" 1, "calt" 1;
   }
 
   .span-tooltip > span {
